# govAI-back

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/forsakringskassan/: parental_leave.md  student_benefits.md
data/migrationsverket/: moving_to_sweden.md  residence_permit.md
data/skatteverket/: personal_number.md  tax_declaration.md
govai/: config.py  main.py
govai/models/: schemas.py
govai/routers/: chat.py
govai/services/: embedding_service.py  llm_service.py  prompt_builder.py  rag_service.py  session_manager.py  vector_store.py
scripts/: get_links.py  seed_vectordb.py
tests/: test_app.py
