[project]
name = "govai"
version = "0.1.0"
description = "AI-powered Swedish government service assistant (Backend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "fastembed==0.2.7",
    "httpx==0.28.1",
    "openai==1.59.5",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "qdrant-client==1.13.2",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
